Attempts to fix scroll on iPhone when sidebar open 2

--- a/src/index.css
+++ b/src/index.css
@@ -96,8 +96,7 @@ a {
 
 .no-scroll {
   overflow: hidden;
-  touch-action: none;
-  -ms-touch-action: none;
+  position: relative;
 }
 
 .main-container {
